# Changelog
# $Id$
mm-dd-yy - Version 6.0.6

  - Fix for Bug#82826 (24942672), Unneeded version requirement for javax.net.ssl Import-Package on OSGi MANIFEST.MF.

10-21-16 - Version 6.0.5

  - Added client-side failover during XSession initialization for multi-router configuration.

  - Removed Extension interface. All extension classes now implement their specific interfaces.

  - Fix for Bug#22988922, GETLENGTH() RETURNS -1 FOR LONGBLOB AND LONGTEXT FIELDS.

  - Fix for Bug#24619829, NEW FAILURES IN C/JAVA UNITTESTS AGAINST MYSQL 8.0.

  - Fix for Bug#75209 (20212882), Set useLocalTransactionState may result in partially committed transaction.

  - Fix for Bug#48346 (11756431), Communications link failure when reading compressed data with compressed=true.
    Thanks to Ryosuke Yamazaki for his contribution.

  - Fix for Bug#80631 (22891845), ResultSet.getString return garbled result with json type data.
    Thanks to Dong SongLing for his contribution.

  - Fix for Bug#64188 (13702433), MysqlXAConnection.MYSQL_ERROR_CODES_TO_XA_ERROR_CODES is missing XA error codes.

  - Fix for Bug#72632 (18759269), NullPointerException for invalid JDBC URL.

  - Fix for Bug#82115 (23743956), Some exceptions are intercepted twice or fail to set the init cause.

  - Fix for Bug#78685 (21938551), Wrong results when retrieving the value of a BIT column as an integer.

  - Fix for Bug#80615 (22954007), prepared statement leak when rewriteBatchedStatements=true and useServerPrepStmt.

  - Extended X DevAPI with flexible parameter lists.
  
  - Added a virtual NodeSession to X DevAPI. 

09-05-16 - Version 6.0.4

  - X DevAPI URL prefix changed from "mysql:x:" to "mysqlx:".

  - Fix for Bug#24301468 X DEVAPI SSL CONNECTION FAILS ON WINDOWS

  - The X DevAPI Table object now represents both database tables and views.

  - Added support for matching against pattern for X DevAPI list_objects calls.